--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ branches:
   only:
   - master
 cache:
+  bundler: true
   directories:
   - cs
+  - Applications/Unity
 install:
 - sudo -E sh ./install.sh
 
